# Mandelbrot

./: .gitignore  CMakeLists.txt  LICENSE  README.md
shaders/: FragmentShader.frag  VertexShader.vert
src/: Shader.cpp  Shader.h  main.c  main.cpp  resource.c  resource.h  shader.c  shader.h
